--- a/Stop watch/style.css
+++ b/Stop watch/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: black;
    text-align: center;
 }
@@ -15,4 +15,37 @@ button {
     color: white;
     font-size: xx-large;
     font-weight: bolder;
+} */
+* body{
+    text-align: center;
+   margin-top: 140px;
+}
+
+#logo{
+    text-decoration: underline;
+    font-size: 70px;
+    font-weight: bolder;
+    text-shadow: 5px 5px 4px grey;
+    
+}
+div h1 {
+    display: inline-block;
+    color: white;
+    background-color: grey; 
+    width: 150px;
+    font-size: 100px; 
+    
+}
+
+button{
+  width: 100px;
+  background-color: black;
+  color: white;
+  font-weight: bolder;
+  height: 50px;
+  margin-top: 40px;
+  border-color: red;
+  border-width: 3px;
+  font-size: x-large;
+ 
 }
